# data-dives

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: time-series-forecasting-basics.ipynb  time-series-forecasting-intermediate.ipynb  time-series-forecasting-regression.ipynb  tutorial.ipynb
src/data_dives/: datasets.py  utils.py
src/data_dives/datasets/: __init__.py  base.py  beijing_pm25.py  gistemp.py  mlo_co2.py
src/data_dives/time_series_forecasting/: __init__.py  bootstrapping.py  features.py  naive.py  stats.py  viz.py
src/time_series_forecasting_study/: __init__.py  datasets.py  utils.py
