[metadata]
name = data_dives
description = TODO!
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    time-series
    forecasting
url = https://github.com/bdewilde/data-dives

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    altair>=4.0.0
    matplotlib>=3.0.0
    missingno>=0.4.0
    pandas>=1.1.0
    statsmodels>=0.12.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=19.0b0,<20.8b0
    flake8>=3.8.0
    mypy>=0.600
    pytest>=6.0.0
    pytest-cov>=2.6.0
    twine>=3.0.0
    wheel>=0.33.5

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
max-line-length = 88
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
